fix: fix circle loader not showing

--- a/src/components/loaders/circle-loader/circle-loader.module.scss
+++ b/src/components/loaders/circle-loader/circle-loader.module.scss
@@ -9,7 +9,7 @@
     display: block;
     position: absolute;
     width: 75%;
-    height: 75%;
+    height: 74.9%;
     margin: 12.5%;
     border: 8px solid #fff;
     border-radius: 50%;
